Give contact left pane min-height

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -425,6 +425,7 @@ li.selected {
   -webkit-transform: none;
   transform: none;
   justify-content: center;
+  min-height: 459px;
 }
 
 #contact_left_pane #contact {
