--- a/app/assets/stylesheets/button_transform.scss
+++ b/app/assets/stylesheets/button_transform.scss
@@ -101,6 +101,7 @@
   width: 59px !important;
   height: 51px;
   line-height: 51px !important;
+  white-space: nowrap;
 }
 
 .navbar .text_display h {
