Reorganize selfie_transform css

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -165,7 +165,7 @@ p {
   line-height: 40px;
   text-align: center;
   letter-spacing: 5px;
-  font-family: "Montserrat", "Tahoma";
+  font-family: "Montserrat", "Tahoma", sans-serif;
   font-size: 11px;
   color: #f65026;
   border: thin solid #f65026;
