--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -5,18 +5,21 @@
       <h1 id="me">Me</h1>
     </div>
 
-    <p> I'm a Chicago-based freelancer.</p>
-
     <p>
-      I love all aspects of programming, but my main interests are front-end development, UI, and applying creativity to code.
+      I specialize in designing and building websites for both
+      large and small companies.
     </p>
 
     <p>
-      My skills range from design, to Javascript, to Ruby on Rails.
+      I have a deep knowledge of Ruby on Rails, HTML, CSS, JavaScript, and Adobe Illustrator.
     </p>
 
     <p>
-      I currently do freelance development for small businesses. I enjoy helping businesses develop a web presence, ... then turning that into efficient, well-designed sites.
+      I currently am based in Chicago, though I am open to working remotely.
+    </p>
+
+    <p>
+      I do freelance development for small businesses. I enjoy helping businesses develop a web presence, ... then turning that into efficient, well-designed sites.
     </p>
 
     <p>
