--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -224,6 +224,7 @@ ul a {
 #about_left_pane {
   position: absolute !important;
   margin: 7.5px 0;
+  min-height: 430px;
   line-height: 20px;
   -webkit-transform: none;
   transform: none;
