Edit about me text

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -6,25 +6,19 @@
     </div>
 
     <p>
-      I specialize in designing and building websites for both
-      large and small companies.
+      Want to expand your business's web presence? I can make a beautiful, secure website that will expose your business to the infinite reach of the web.
     </p>
 
     <p>
-      I have a deep knowledge of Ruby on Rails, HTML, CSS, JavaScript, and Adobe Illustrator.
+      When I started my career as a web developer, I wanted to take my background in sales and marketing and use it to make a different kind of web development service, one that places the user experience first. Everything I make, I make with the customer in mind.
     </p>
 
     <p>
-      I currently am based in Chicago, though I am open to working remotely.
+      My philosophy is one of close collaboration with my client. Just tell me your vision, and I will make all the technical stuff happen like magic.
     </p>
 
     <p>
-      I do freelance development for small businesses. I enjoy helping businesses develop a web presence, ... then turning that into efficient, well-designed sites.
+      I have a deep knowledge of Ruby on Rails, HTML5, CSS3, JavaScript, and Adobe Illustrator. Currently based in Chicago, I am also available to work remotely.
     </p>
-
-    <p>
-      In my free time, I like to contribute to open-source projects and continue to grow my knowledge of new technologies.
-    </p>
-
   </div>
 </div>
