Add right swipe to skills picture slider

--- a/app/views/static_pages/skills.html.erb
+++ b/app/views/static_pages/skills.html.erb
@@ -10,7 +10,7 @@
       <ul>
         <% @skills.each do |skill| %>
           <% @highlighted.include?(skill) ? hl = "highlight" : hl = "no_highlight" %>
-          <%= content_tag(:li, skill.upcase, id: skill.gsub(/ /, '_'), class: hl, onclick: "lightButton(this)") %>
+          <%= content_tag(:li, skill.upcase, id: skill.gsub(/ /, '_'), class: hl) %>
         <% end %>
       </ul>
     </div>
