--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -343,26 +343,30 @@ li.selected {
 
 #skills_project_img img {
   position: absolute;
-  left: 100%;
   display: block;
   width: 509.19px;
   height: 318.5px;
+  visibility: hidden;
 }
 
-#skills_project_img img.show {
+#skills_project_img img#right {
   position: absolute;
   left: 100%;
   -webkit-transform: translateX(-100%);
   -ms-transform: translateX(-100%);
   transform: translateX(-100%);
   transition: 0.35s;
+  visibility: visible;
 }
 
-#slide {
+#skills_project_img img#left {
   position: absolute;
-  width: 100%;
-  height: 100%;
-  left: 509.19px;
+  left: -100%;
+  -webkit-transform: translateX(100%);
+  -ms-transform: translateX(100%);
+  transform: translateX(100%);
+  transition: 0.35s;
+  visibility: visible;
 }
 
 #skills_page #r_button {
@@ -708,8 +712,12 @@ li.selected {
     height: 250.01453px !important;
   }
 
-  #skills_project_img img.show { 
+  #skills_project_img img#right { 
     transform: translateX(-94%) !important;
+  }
+
+  #skills_project_img img#left { 
+    transform: translateX(83.4%) !important;
   }
 
   #selfie_container {
@@ -892,8 +900,12 @@ li.selected {
     width: 100% !important;
   }
 
-  #skills_project_img img.show { 
+  #skills_project_img img#right { 
     transform: translateX(-82.5%) !important;
+  }
+
+  #skills_project_img img#left { 
+    transform: translateX(48.5%) !important;
   }
 
   #headline2 { margin-bottom: 36px !important; }
