Change link in my_works page

--- a/app/views/static_pages/my_work.html.erb
+++ b/app/views/static_pages/my_work.html.erb
@@ -1,7 +1,7 @@
 <div id="my_work_page">
   <div class="sample_containers" id="sample_container1">
-    <%= link_to image_tag("ruby_on_rails2"), "http://arcane-stream-86572.herokuapp.com/" %>
-    <%= link_to "http://arcane-stream-86572.herokuapp.com/", class: "sample_description" do %>
+    <%= link_to image_tag("ruby_on_rails2"), "https://calm-escarpment-52412.herokuapp.com/" %>
+    <%= link_to "https://calm-escarpment-52412.herokuapp.com/", class: "sample_description" do %>
       <div class="sample_description"></div>
     <% end %>
   </div>
