--- a/app/views/static_pages/my_work.html.erb
+++ b/app/views/static_pages/my_work.html.erb
@@ -5,9 +5,17 @@
       <div class="sample_description"></div>
     <% end %>
   </div>
+  
   <div class="sample_containers" id="sample_container2">
     <%= link_to image_tag("object-oriented_programming"), "https://github.com/johnjmarks4/chess" %>
     <%= link_to "https://github.com/johnjmarks4/chess", class: "sample_description" do %>
+      <div class="sample_description"></div>
+    <% end %>
+  </div>
+
+  <div class="sample_containers" id="sample_container2">
+    <%= link_to image_tag("flickr"), "https://frozen-cove-62742.herokuapp.com/" %>
+    <%= link_to "https://frozen-cove-62742.herokuapp.com/", class: "sample_description" do %>
       <div class="sample_description"></div>
     <% end %>
   </div>
